# sdl_roguelike

./: CMakeLists.txt  README.markdown  build.sh  lint.sh  run_tests.sh
.github/workflows/: 0_lint.yml  1_cmake.yml  cmake.yml  lint_and_build.yml
src/: bsp.c  bsp.h  dungeon.c  dungeon.h  main.c  rand.c  slist.c  slist.h  tile.c  tile.h
test/: bsp_test.c  helpers.h  slist_test.c
